<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="DUT_PARAMETER_INPUT" Id="{51aab15a-3022-403e-b35b-a6ed69a94c5a}">
    <Declaration><![CDATA[TYPE DUT_PARAMETER_INPUT :
STRUCT
	///Value of the parameter 
	Value: LREAL;
	///Possibility to a string value depending on the parameter
	StringValue: STRING(80);
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>