<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="DUT_SERVER_PARAMETERINPUTARRAY" Id="{07f48730-9538-45f9-a9f3-7b4fbd1ccc30}">
    <Declaration><![CDATA[TYPE DUT_SERVER_PARAMETERINPUTARRAY :
STRUCT
	ParameterInput0: DUT_PARAMETER_INPUT;
	ParameterInput1: DUT_PARAMETER_INPUT;
	ParameterInput2: DUT_PARAMETER_INPUT;
	ParameterInput3: DUT_PARAMETER_INPUT;
	ParameterInput4: DUT_PARAMETER_INPUT;
	ParameterInput5: DUT_PARAMETER_INPUT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>