<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <POU Name="Fb_Test_init_z" Id="{759e307c-b2f1-4c1d-8130-1b6bb69312f0}">
    <Declaration><![CDATA[FUNCTION_BLOCK Fb_Test_init_z
VAR_INPUT
	execute: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF execute THEN
	MI5.Module2001.Input.SkillInput.SkillInput0.ParameterInput.ParameterInput0.StringValue := 'opc.tcp://192.168.192.119:4840';
	MI5.Module2001.Input.SkillInput.SkillInput0.ParameterInput.ParameterInput1.StringValue := 'MI5.Module1204.Output.PositionSensor';
	MI5.Module2001.Input.SkillInput.SkillInput0.ParameterInput.ParameterInput2.StringValue := 'MI5.Module1204.Input.PositionInput';
	MI5.Module2001.Input.SkillInput.SkillInput0.ParameterInput.ParameterInput3.StringValue := '4';
	MI5.Module2001.Input.SkillInput.SkillInput0.ParameterInput.ParameterInput4.StringValue := 'PLC1';
	MI5.Module2001.Input.SkillInput.SkillInput0.Execute := TRUE;
	IF MI5.Module2001.Output.SkillOutput.SkillOutput0.Done OR MI5.Module2001.Output.SkillOutput.SkillOutput0.Error THEN
		MI5.Module2001.Input.SkillInput.SkillInput0.Execute := FALSE;
		execute := FALSE;
	END_IF
END_IF]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>